fix error swagger, controller
